
Bind9 logging
-------------

It is now possible to log the duration of DNS operations performed by Bind9
This should aid future diagnosis of performance issues, and could be used to
monitor DNS performance. The logging is enabled by setting log level to
"dns:10" in smb.conf

The logs are currently Human readable text only, i.e. no JSON formatted output.

Log lines are of the form:

    <function>: DNS timing: result: [<result>] duration: (<duration>)
    zone: [<zone>] name: [<name>] data: [<data>]

    durations are in microseconds.





REMOVED FEATURES
================

Web server
----------

As a leftover from work related to the Samba Web Administration Tool (SWAT),
Samba still supported a Python WSGI web server (which could still be turned on
from the 'server services' smb.conf parameter). This service was unused and has
now been removed from Samba.


smb.conf changes
================

  Parameter Name                     Description                Default
  --------------                     -----------                -------

  web port                           Removed


KNOWN ISSUES
============

https://wiki.samba.org/index.php/Release_Planning_for_Samba_4.11#Release_blocking_bugs


#######################################
Reporting bugs & Development Discussion
#######################################

Please discuss this release on the samba-technical mailing list or by
joining the #samba-technical IRC channel on irc.freenode.net.

If you do report problems then please try to send high quality
feedback. If you don't provide vital information to help us track down
the problem then you will probably be ignored.  All bug reports should
be filed under the Samba 4.1 and newer product in the project's Bugzilla
database (https://bugzilla.samba.org/).


======================================================================
== Our Code, Our Bugs, Our Responsibility.
== The Samba Team
======================================================================
