@@ -277,8 +277,8 @@ class cmd_domain_provision(Command):
                default="2008_R2"),
         Option("--base-schema", type="choice", metavar="BASE-SCHEMA",
                choices=["2008_R2", "2008_R2_old", "2012", "2012_R2"],
-               help="The base schema files to use. Default is (Windows) 2008_R2.",
-               default="2008_R2"),
+               help="The base schema files to use. Default is (Windows) 2012_R2.",
+               default="2012_R2"),
         Option("--next-rid", type="int", metavar="NEXTRID", default=1000,
                help="The initial nextRid value (only needed for upgrades).  Default is 1000."),
         Option("--partitions-only",
