@@ -2138,7 +2138,7 @@ def provision(logger, session_info, smbconf=None,
               useeadb=False, am_rodc=False, lp=None, use_ntvfs=False,
               use_rfc2307=False, maxuid=None, maxgid=None, skip_sysvolacl=True,
               ldap_backend_forced_uri=None, nosync=False, ldap_dryrun_mode=False,
-              ldap_backend_extra_port=None, base_schema=None,
+              ldap_backend_extra_port=None, base_schema="2012_R2",
               plaintext_secrets=False, backend_store=None):
     """Provision samba4
 
